--- a/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
@@ -57,7 +57,7 @@
             </li>
           </ul>
         </div>
-        <div class="col-lg-2 caption">
+        <!-- <div class="col-lg-2 caption">
           <ul class="list-group">
             <li class="list-group-item">
               <div class="custom-control custom-checkbox mr-sm-2">
@@ -84,7 +84,7 @@
               </div>
             </li>
           </ul>
-        </div>
+        </div> -->
 
         <div class="col-lg-12 border-top pt-3"> </div>
         <div class="col-lg-4 caption">
@@ -110,7 +110,7 @@
             <li class="list-group-item text-capitalize">{{postJobForm?.value?.requirement?.end_to_end_implementation}}</li>
           </ul>
         </div>
-        <div class="col-lg-2 caption">
+        <!-- <div class="col-lg-2 caption">
           <ul class="list-group">
             <li class="list-group-item">
               <div class="custom-control custom-checkbox mr-sm-2">
@@ -143,7 +143,7 @@
               </div>
             </li>
           </ul>
-        </div>
+        </div> -->
         <div class="col-lg-12 border-top pt-3"> </div>
 
         <div class="col-lg-4 caption">
@@ -182,7 +182,7 @@
             <li class="list-group-item text-capitalize">{{onGetYesOrNoValue(postJobForm?.value?.requirement?.visa_sponsorship)}}</li>
           </ul>
         </div>
-        <div class="col-lg-2 caption">
+        <!-- <div class="col-lg-2 caption">
           <ul class="list-group">
             <li class="list-group-item">
               <div class="custom-control custom-checkbox mr-sm-2">
@@ -208,12 +208,6 @@
                 <label class="custom-control-label" for="select13">&nbsp;</label>
               </div>
             </li>
-            <!-- <li class="list-group-item">
-              <div class="custom-control custom-checkbox mr-sm-2">
-                <input type="checkbox" checked class="custom-control-input" id="select14">
-                <label class="custom-control-label" for="select14">&nbsp;</label>
-              </div>
-            </li> -->
             <li class="list-group-item">
               <div class="custom-control custom-checkbox mr-sm-2">
                 <input type="checkbox" checked (change)="onAddOrRemoveMustMatch($event?.target?.checked, 'work_authorization')" class="custom-control-input" id="select14">
@@ -227,7 +221,7 @@
               </div>
             </li>
           </ul>
-        </div>
+        </div> -->
 
         <!-- <div class="col-lg-12 border-top pt-3"> </div> -->
         <ng-container *ngIf="childForm?.value?.jobPrev?.extra_criteria?.length > 0">
@@ -243,7 +237,7 @@
               *ngFor="let extra_criteria of childForm?.value?.jobPrev?.extra_criteria; let i = index"
               class="list-group-item text-capitalize">{{extra_criteria?.value}}</li></ul>
           </div>
-          <div class="col-lg-2 caption">
+          <!-- <div class="col-lg-2 caption">
             <ul class="list-group">
               <li *ngFor="let extra_criteria of childForm?.value?.jobPrev?.extra_criteria; let i = index"
                class="list-group-item">
@@ -253,7 +247,7 @@
                 </div>
               </li>
             </ul>
-          </div>
+          </div> -->
         </ng-container>
 
         <div class="col-lg-12 border-top pt-3"> </div>
