--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-footer/create-candidate-footer.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-footer/create-candidate-footer.component.html
@@ -8,11 +8,11 @@
   </div>
   <div class="col-lg-2 col-md-6">
     <div class="form-group">
-      <button (click)="onNext()" *ngIf="currentTabInfo.tabNumber != 4" type="button"
+      <button  [disabled]="!createCandidateForm.valid" (click)="onNext()" *ngIf="currentTabInfo.tabNumber != 4" type="button"
         class="btn btn-theme-blue btn-block btn-lg btnNext">
         {{"common.next" | translate }}
       </button>
-      <button *ngIf="currentTabInfo.tabNumber == 4" type="button" class="btn btn-theme-green btn-block btn-lg btnSubmit"
+      <button  [disabled]="!createCandidateForm.valid" *ngIf="currentTabInfo.tabNumber == 4" type="button" class="btn btn-theme-green btn-block btn-lg btnSubmit"
         (click)="onToggleRegisterReview(true)">
         {{"common.submit" | translate }}
       </button>
@@ -21,8 +21,8 @@
 </div>
 
 
-<app-candidate-review-modal
+<!-- <app-candidate-review-modal
 *ngIf="isOpenedRegisterReviewModal"
 [toggleRegisterReviewModal]="isOpenedRegisterReviewModal"
 (onEvent)="onToggleRegisterReview($event)"
-></app-candidate-review-modal>
+></app-candidate-review-modal> -->
