--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.css
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.css
@@ -10,3 +10,27 @@
 .cursor-pointer {
   cursor: pointer;
 }
+
+.upload-image {
+  width: 150px;
+  height: 150px;
+  background: #e7e7e7;
+  text-align: center;
+  margin: 0 auto 15px;
+}
+
+.upload-input {
+  position: relative;
+  top: -150px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+}
+
+.upload-icon {
+  vertical-align: middle;
+  line-height: 155px;
+  font-size: 18px;
+  color: #a8a8a8;
+}
