--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-skillset/create-candidate-skillset.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-skillset/create-candidate-skillset.component.html
@@ -1,67 +1,101 @@
 
-<div>
+<div formGroupName="skillSet">
   <div class="row mt-5">
     <div class="col-lg-12 col-md-6">
       <label>{{"postYourResume.handsOnExperience" | translate }}</label>
     </div>
   </div>
-  <ng-container>
-    <div class="row mt-2" *ngFor="let item of skillArray; let i=index">
-      <div class="col-lg-4 col-md-6">
-        <input type="text" class="form-control" [placeholder]="'postYourResume.sapCategory' | translate">
-      </div>
-      <div class="col-lg-2 col-md-4">
-        <div class="input-group mb-3">
-          <input type="text" class="form-control" placeholder="Exp">
-          <div class="input-group-append ">
-            <select class="input-group-text" id="basic-addon2">
-              <option>Yrs</option>
-              <option>Mon</option>
-            </select>
+    <div class="row mt-2" *ngFor="let ticket of t.controls; let i = index; let last = last">
+      <ng-container [formGroup]="ticket">
+        <div class="col-lg-5 col-md-8">
+          <ngx-select
+          class="text-uppercase"
+          appMarkAsterisk
+          [placeholder]="'skill'"
+          [items]="skillItems"
+          formControlName="skill_id"
+          optionValueField="id"
+          optionTextField="tag"
+          autoClearSearch="true"
+          noResultsFound="No results found"
+           >
+           <ng-template ngx-select-option-selected let-option let-text="text">
+            {{option?.text ? option?.text?.split('-')[0] : ''}}
+          </ng-template>
+
+          <ng-template ngx-select-option let-option let-text="text">
+              {{option?.text}}
+          </ng-template>
+
+          <ng-template ngx-select-option-not-found>
+              Nothing found
+          </ng-template>
+           </ngx-select>
+          <app-control-messages [control]="ticket['controls']['skill_id']"></app-control-messages>
+        </div>
+
+        <div class="col-lg-2 col-md-4">
+          <div class="input-group mb-3">
+            <input numbersOnly formControlName="experience" type="text" class="form-control" placeholder="Exp">
+            <div class="input-group-append ">
+              <select formControlName="exp_type" class="input-group-text" id="basic-addon2">
+                <option value="years">Yrs</option>
+                <option value="months">Mon</option>
+              </select>
+            </div>
+            <app-control-messages [control]="ticket['controls']['experience']"></app-control-messages>
           </div>
+
         </div>
-      </div>
-      <div class="col-lg-1 col-md-2">
-        <button type="button" class="btn btn-outline-danger" style="line-height: 1.75; padding: .5rem 1.0rem;"
-          (click)="onRemove(i)"><i class="fas fa-times"></i></button>
-      </div>
-    </div>
-  </ng-container>
-  <div class="row mt-2">
-    <div class="col-lg-4 col-md-6">
-      <input type="text" class="form-control" [placeholder]="'postYourResume.sapCategory' | translate">
-    </div>
-    <div class="col-lg-2 col-md-4">
-      <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="Exp">
-        <div class="input-group-append ">
-          <select class="input-group-text" id="basic-addon2">
-            <option>Yrs</option>
-            <option>Mon</option>
-          </select>
+        <div class="col-lg-2 col-md-4">
+          <button type="button" class="btn btn-outline-danger"
+            style="line-height: 1.75; padding: .5rem 1.0rem;" (click)="onRemove(i)"><i class="fas fa-times"></i></button>
+          <button *ngIf="last" (click)="onDuplicate()" type="button" class="btn btn-outline-green ml-2"
+            style="line-height: 1.75; padding: .5rem 1.0rem;"><i class="fas fa-plus"></i></button>
         </div>
-      </div>
+      </ng-container>
     </div>
-    <div class="col-lg-1 col-md-2">
-      <button type="button" (click)="onDuplicate()" class="btn btn-outline-success" style="line-height: 1.75; padding: .5rem 1.0rem;">
-        <i class="fas fa-plus"></i>
-      </button>
-    </div>
-  </div>
 
   <div class="row mt-3">
     <div class="col-lg-9 col-md-6">
       <div class=" form-group">
-        <label>{{"dashboard.knowledgeOn" | translate }}</label>
-        <input type="text" class="form-control" value="SAP Mobility, SAP FICO, SAP BODS" data-role="tagsinput">
+        <label>{{"postJob.knowledgeOnOtherSapSkills" | translate }} </label>
+        <ngx-select
+        class="text-capitalize"
+        [placeholder]="'skill'"
+        [multiple]="true"
+        appMarkAsterisk
+        [items]="skillItems"
+        formControlName="skills"
+        optionValueField="id"
+        optionTextField="tag"
+        autoClearSearch="true"
+        noResultsFound="No results found"
+         >
+         <ng-template ngx-select-option-selected let-option let-text="text">
+          {{option?.text ? option?.text?.split('-')[0] : ''}}
+        </ng-template>
+
+        <ng-template ngx-select-option let-option let-text="text">
+            {{option?.text}}
+        </ng-template>
+
+        <ng-template ngx-select-option-not-found>
+            Nothing found
+        </ng-template>
+        </ngx-select>
+        <app-control-messages [control]="f['skills']"></app-control-messages>
       </div>
     </div>
   </div>
   <div class="row mt-2">
     <div class="col-lg-9 col-md-6">
       <div class=" form-group">
-        <label>{{"dashboard.programmingSkills" | translate }}</label>
-        <input type="text" class="form-control" value="Python, JAVA, Microsoft BI, Angular" data-role="tagsinput">
+        <label>{{"postJob.programmingSkills" | translate }}</label>
+        <ng-select id="programmingSkills" [addTag]="true" addTagText="Add Programming Skill" bindValue="label" bindLabel="label" placeholder="Select item" appendTo="body" multiple="true"
+          formControlName="programming_skills">
+        </ng-select>
+        <app-control-messages [control]="f['programming_skills']"></app-control-messages>
       </div>
     </div>
   </div>
@@ -69,7 +103,9 @@
     <div class="col-lg-9 col-md-6">
       <div class=" form-group">
         <label>{{"postYourResume.others" | translate }}</label>
-        <input type="text" class="form-control" value="Python, SAP BODS" data-role="tagsinput">
+        <ng-select id="othersSkills" [addTag]="true" addTagText="Add Programming Skill" bindValue="label" bindLabel="label" placeholder="Select item" appendTo="body" multiple="true"
+          formControlName="other_skills">
+        </ng-select>
       </div>
     </div>
   </div>
@@ -77,11 +113,10 @@
     <div class="col-lg-9 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.certification" | translate }} </label>
-        <input type="text" class="form-control" value="SAP Mobility">
+        <ng-select id="programmingSkills" [addTag]="true" addTagText="Add Programming Skill" bindValue="label" bindLabel="label" placeholder="Select item" appendTo="body" multiple="true"
+          formControlName="certification">
+        </ng-select>
       </div>
     </div>
   </div>
-
-
-
 </div>
